# Material-Learning

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
.gstack/security-reports/: 2026-05-10-000000.json  2026-05-10-125300-security-audit-after-fixes.json  20260511-203000-cso.json
docs/: design-knowledge-base-20260509.md  implementation-plan-fork-rewrite.md  llama-integration-interface-design.md  mcp-setup.md  plan-eng-review-sidecar-risk.md
scripts/: bump-tauri-version.js  generate-release-doc.js  pre-ship-check.js  verify-artifacts.js  verify-artifacts.test.js
src/: App.tsx  Router.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.ios.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json  emergency.json  mobile.json
src-tauri/kb-core/: Cargo.toml
src-tauri/knowledge-db/: Cargo.toml
src-tauri/knowledge-db/src/: lib.rs  schema.rs
src-tauri/mcp/: Cargo.toml  test-folders.sh  test-handshake.sh  test-write.sh
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  tray.rs
src/components/: AsrToggleController.tsx  ClipUrlModal.tsx  FileTypeIcon.tsx  HomeSearchInput.tsx  ImportPreviewModal.tsx  MicButton.tsx  NewNoteButton.tsx  NewTodoButton.tsx  QuickCaptureAsrModal.tsx  TagColorPicker.tsx  TemplatePickerModal.tsx
src/hooks/: useAudioLevel.ts  useAutoSave.ts  useCommand.ts  useContextMenu.ts  useFeatureEnabled.ts  useIsMobile.ts  useSearchSuggestions.ts  useSilenceAutoStop.ts  useUpdateChecker.ts
src/lib/: aiAttach.ts  (+13 more)
(+266 files in other folders)
