[package]
name = "knowledge-db"
version = "0.1.0"
description = "knowledge.db - 知识库主数据库"
authors = ["Material Learning"]
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"